<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1,2,3">
    <!--O atributo stretchColumns
    server para falar quais 'colunas' são expansíveis -->

    <!-- uma linha do tableLayout é o tableRow-->
    <TableRow>

        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nome"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nomeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="textPersonName" />
        <!-- o atributo layout_span serve para informar
           o quanto de espaço o componente pega na tela. -->
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/telefoneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/telefoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:inputType="phone" />
    </TableRow>

    <TableRow>

        <CheckBox
            android:id="@+id/notificacoesCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/receber_notificacoes" />

        <RadioGroup
            android:id="@+id/notificacoesRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/emailRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <RadioButton
                android:id="@+id/telefoneRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefone" />
        </RadioGroup>
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/limparButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="limparFormulario"
            android:layout_span="2"
            android:text="@string/limpar" />

        <Button
            android:id="@+id/salvarButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/salvar" />
    </TableRow>

</TableLayout>