<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nome"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nomeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <LinearLayout
            android:id="@+id/linearLayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

        <!-- aqui é adicionada mais views do campo celular
             dinamicamente dentro desse linear. -->
        <LinearLayout
            android:id="@+id/linearLayout_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/btn_adicionar_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="adicionarEmail"
            android:text="Adicionar Email" />

        <Button
            android:id="@+id/btn_adicionar_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="adicionarTelefone"
            android:text="Adicionar Telefone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/notificacoesCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/receber_notificacoes" />

            <RadioGroup
                android:id="@+id/notificacoesRadioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone">

                <RadioButton
                    android:id="@+id/emailRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <RadioButton
                    android:id="@+id/telefoneRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefone" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/limparButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="limparFormulario"
                android:text="@string/limpar" />

            <Button
                android:id="@+id/salvarButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/salvar" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>